added "hi there"  to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>this is the hello world message</p>
+    <p>hi there!this is the hello world message</p>
     <p>added new line</p>
 </body>
 </html>
