added another message

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hi there!this is the hello world message</p>
+    <p>hi there!this is the hello world message + message</p>
     <p>added new line with new word "jack"</p>
 </body>
 </html>
